--- a/bot/config.json
+++ b/bot/config.json
@@ -1,9 +1,10 @@
 {
   "server_id": 0,
   "channels": {
-    "char_for_game_code": 0,
+    "chat_for_game_code": 0,
     "call_to_display_game_code": 0,
     "among_us_call": 0,
-    "chat_for_admins": 0
-  }
+    "chat_for_admins": 0,
+  },
+  "use_german": false
 }
