Fixed typo in config.json examlpe

--- a/bot/config.json
+++ b/bot/config.json
@@ -4,7 +4,7 @@
     "chat_for_game_code": 0,
     "call_to_display_game_code": 0,
     "among_us_call": 0,
-    "chat_for_admins": 0,
+    "chat_for_admins": 0
   },
   "use_german": false
 }
